fix show and hide note button visibility, fix match select label and size

--- a/src/clients/viewer/viewer.css
+++ b/src/clients/viewer/viewer.css
@@ -10,14 +10,14 @@ div#loading {}
 
 div#tools {}
 
-.tools .Input>label {
+.tools .ToolBar .Input>label {
   color: rgb(48, 93, 109);
   font-family: roboto_monoregular, "Roboto Mono", monospace;
   font-size: 0.8em;
   text-align: center;
 }
 
-.tools .Input>input {
+.tools .ToolBar .Input>input {
   border: 0;
   border-bottom: 1pt solid grey;
   outline: none;
@@ -26,7 +26,7 @@ div#tools {}
   width: 37ch;
 }
 
-.tools .Select>label {
+.tools .ToolBar .Select>label, .header .Select>label {
   color: rgb(48, 93, 109);
   font-family: roboto_monoregular, "Roboto Mono", monospace;
   font-size: 0.8em;
@@ -34,9 +34,9 @@ div#tools {}
   text-transform: none;
 }
 
-.tools .Select>select {
+.ToolBar .Select>select, .header .Select>select {
   border: 0;
-  border-bottom: 1pt solid grey;
+  border-bottom: 1pt solid gray;
   outline: none;
   font-family: roboto_monoregular, "Roboto Mono", monospace;
   font-size: 1em;
@@ -136,7 +136,7 @@ div#muuntaja {}
 
 .col .header #match {
   text-align: end;
-  min-width: 12ch;
+  min-width: 8ch;
 }
 
 .show-hide-buttons {
